アイコンの画像の追加

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="" alt="alarm">
+        <img src="../imgs/お風呂猫さん.png" alt="icon">
+    </header>
     <main></main>
 </body>
 </html>
