alarmの画像の追加

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <header>
-        <img src="" alt="alarm">
-        <img src="../imgs/お風呂猫さん.png" alt="icon">
+        <div>
+            <img src="../imgs/クリスマスベルの無料素材5.png" alt="alarm">
+            <img src="../imgs/お風呂猫さん.png" alt="icon">
+        </div>
     </header>
     <main></main>
 </body>
