パスの変更

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="flex flex-row-reverse">
+        <button> Button 1 </button>
+        <button> Button 2 </button>
+        <button> Button 3 </button>
+    </div>
 </body>
 </html>
