画像の追加

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="/frontend/src/main/resources/static/output.css">
     </head>
     <body>
+        // header部分の表示一覧
+        <header>
+            <div>
+                <img src="" alt="">
+            </div>
+        </header>
         <h1  class="text-3xl font-bold underline">Welcome!</h1>
         <p>Lorem Ipsum</p>
     </body>
