画像の名前の変更

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -9,7 +9,8 @@
         // header部分の表示一覧
         <header>
             <div>
-                <img src="" alt="">
+                <img src="../images/お風呂猫さん.png" alt="icon">
+                <img src="../images/クリスマスベルの.png" alt="">
             </div>
         </header>
         <h1  class="text-3xl font-bold underline">Welcome!</h1>
