--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -6,11 +6,10 @@
         <link rel="stylesheet" href="/frontend/src/main/resources/static/output.css">
     </head>
     <body>
-        // header部分の表示一覧
         <header>
-            <div>
-                <img src="../images/お風呂猫さん.png" alt="icon">
-                <img src="../images/クリスマスベルの.png" alt="">
+            <div class="flex">
+                <img class="w-24 h-16" src="/frontend/images/alarm.png" alt="alarm">
+                <img class="w-30 h-30" src="/frontend/images/icon.png" alt="icon">
             </div>
         </header>
         <h1  class="text-3xl font-bold underline">Welcome!</h1>
