headerサイズの変更

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="/frontend/src/main/resources/static/output.css">
     </head>
     <body>
-        <header>
-            <div class="flex">
-                <img class="w-24 h-16" src="/frontend/images/alarm.png" alt="alarm">
-                <img class="w-30 h-30" src="/frontend/images/icon.png" alt="icon">
+        <header class="h-40 bg-blue-400">
+            <div class="flex items-center justify-center">
+                <img class="w-24 h-20" src="/frontend/images/alarm.png" alt="alarm">
+                <img class="w-20 h-24" src="/frontend/images/icon.png" alt="icon">
             </div>
         </header>
         <h1  class="text-3xl font-bold underline">Welcome!</h1>
