--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <header class="h-40 bg-blue-400">
+            <!-- ハンバーガーメニュー -->
+            <div>
+                
+            </div>
+            <!-- iconとalarmの位置 -->
             <div class="flex items-center justify-center">
                 <img class="w-24 h-20" src="/frontend/images/alarm.png" alt="alarm">
                 <img class="w-20 h-24" src="/frontend/images/icon.png" alt="icon">
