--- a/backend/nginx/statics/index.html
+++ b/backend/nginx/statics/index.html
@@ -8,8 +8,11 @@
 <body>
     <h1 id="status_h1"></h1>
     <button id="logout_btn">ログアウト</button>
-    <a href="/auth/discord?redirect_url=/statics/">ログイン (discord)</a>
-    
+    <button id="get_user_btn">ユーザー情報取得</button>
+    <a href="/auth/discord?redirect_url=/app/callback">ログイン (discord)</a>
+    <a href="/auth/google?redirect_url=/app/callback">ログイン (google)</a>
+    <a href="/auth/line?redirect_url=/app/callback">ログイン (line)</a>
+
     <script src="./scripts/main.js"></script>
 </body>
 </html>
