今日のタスク表示設定

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/frontend/src/main/resources/static/output.css">
     </head>
     <body>
+        <!-- header要素 -->
         <header class="h-40 bg-slate-500 flex items-center">
             <!-- ハンバーガーメニュー -->
             <div class="bg-black w-32 h-32 absolute left-5">
@@ -20,6 +21,15 @@
                 <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon">
             </div>
         </header>
-        
+        <!-- main要素 -->
+        <main>
+            <div class="justify-center items-center">
+                <h2 class="text-7xl m-auto">〇月〇日</h2>
+                <div>
+                    <p>Tasks today</p>
+                    <p>残り〇個</p>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
