--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -23,11 +23,11 @@
         </header>
         <!-- main要素 -->
         <main>
-            <div class="justify-center items-center">
-                <h2 class="text-7xl m-auto">〇月〇日</h2>
-                <div>
-                    <p>Tasks today</p>
-                    <p>残り〇個</p>
+            <div>
+                <h2 class="text-5xl mt-4 ml-14">〇月〇日</h2>
+                <div class="flex-none border-black border-4 mt-4 w-4/6 mr-auto ml-auto h-28 items-center rounded-3xl">
+                    <p class="text-3xl m-1">Tasks today</p>
+                    <p class="text-4xl ml-4 ">残り〇個</p>
                 </div>
             </div>
         </main>
