カレンダーの画像の追加

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -23,12 +23,16 @@
         </header>
         <!-- main要素 -->
         <main>
+            <!-- 今日の予定表示 -->
             <div>
-                <h2 class="text-5xl mt-4 ml-14">〇月〇日</h2>
-                <div class="flex-none border-black border-4 mt-4 w-4/6 mr-auto ml-auto h-28 items-center rounded-3xl">
+                <h2 class="text-5xl mt-6 ml-14">〇月〇日</h2>
+                <div class="flex-none border-black border-4 mt-5 w-4/6 mr-auto ml-auto h-28 items-center rounded-3xl">
                     <p class="text-3xl m-1">Tasks today</p>
                     <p class="text-4xl ml-4 ">残り〇個</p>
                 </div>
+            </div>
+            <div>
+                <img class="w-full mt-32" src="/frontend/images/Calender.png" alt="カレンダー">
             </div>
         </main>
     </body>
