色合いの調節

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -5,14 +5,14 @@
         <title>Title</title>
         <link rel="stylesheet" href="/frontend/src/main/resources/static/output.css">
     </head>
-    <body>
+    <body class="bg-orange-100">
         <!-- header要素 -->
-        <header class="h-40 bg-slate-500 flex items-center">
+        <header class="h-40 bg-orange-100 flex items-center">
             <!-- ハンバーガーメニュー -->
-            <div class="bg-black w-32 h-32 absolute left-5">
-                    <span class="bg-white h-2 w-24 absolute top-8 left-3.5"></span>
-                    <span class="bg-white h-2 w-24 absolute top-14 left-3.5"></span>
-                    <span class="bg-white h-2 w-24 absolute top-20 left-3.5"></span>
+            <div class=" w-32 h-32 absolute left-5">
+                    <span class="bg-black h-2 w-24 absolute top-8 left-3.5"></span>
+                    <span class="bg-black h-2 w-24 absolute top-14 left-3.5"></span>
+                    <span class="bg-black h-2 w-24 absolute top-20 left-3.5"></span>
             </div>
 
             <!-- iconとalarmの画像配置-->
@@ -25,9 +25,9 @@
         <main>
             <!-- 今日の予定表示 -->
             <div>
-                <h2 class="text-5xl mt-6 ml-14">〇月〇日</h2>
-                <div class="flex-none border-black border-4 mt-5 w-4/6 mr-auto ml-auto h-28 items-center rounded-3xl">
-                    <p class="text-3xl m-1">Tasks today</p>
+                <h2 class="text-5xl mt-6 ml-14 text-orange-500">〇月〇日</h2>
+                <div class="flex-none border-orange-300 bg-orange-200 border-4 mt-5 w-4/5 mr-auto ml-auto h-28 items-center rounded-3xl">
+                    <p class="text-3xl m-1 text-orange-600">Tasks today</p>
                     <p class="text-4xl ml-4 ">残り〇個</p>
                 </div>
             </div>
