💡 コメント追加

--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -31,6 +31,7 @@
                     <p class="text-4xl ml-4 ">残り〇個</p>
                 </div>
             </div>
+            <!-- カレンダー -->
             <div>
                 <img class="w-full mt-32" src="/frontend/images/Calender.png" alt="カレンダー">
             </div>
