--- a/frontend/src/main/resources/html/index.html
+++ b/frontend/src/main/resources/html/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <title>Title</title>
     <link rel="stylesheet" href="/frontend/src/main/resources/static/output.css" />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <style>
         button {
             -webkit-appearance: none;
@@ -17,7 +18,6 @@
             border-radius: 0;
             text-align: inherit;
             display: inline-block;
-            /* 変更点 */
             justify-content: center;
             align-items: center;
         }
@@ -30,11 +30,11 @@
         .btn {
             /* ボタンの配置位置 */
             position: fixed;
-            top: 16px;
-            left: 16px;
+            top: 30px;
+            left: 30px;
             /* ボタンの大きさ */
-            width: 58px;
-            height: 48px;
+            width: 72px;
+            height: 64px;
             /* 最前面に */
             z-index: 10;
             display: flex;
@@ -109,26 +109,22 @@
             position: fixed;
             left: 0;
             top: 0;
-            /* メニューの位置マイナス指定で画面外に */
-            transform: translateX(-100%);
             width: 70%;
             height: 100vh;
-            /* メニューを縦に */
             display: flex;
             flex-direction: column;
             color: #efefef;
-            background-color: rgba(167, 148, 58, 0.7);
             transition: .3s;
             z-index: 9;
+            padding: 10px;
+            /* メニューが開いたときに他のコンテンツを右にずらす */
+            transform: translateX(-100%);
         }
 
         .menu-list {
-            width: 100%;
-            padding: 16px;
-            /* メニューテキスト位置をリスト内中心に */
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
+            list-style: none;
+            padding: 0;
+            margin: 0;
         }
 
         .menu-list:hover {
@@ -141,23 +137,25 @@
         /* メニューを開いたとき */
         .menu.open {
             transform: translateX(0);
+            /* 画面幅の30%にメニューを表示 */
         }
-        
     </style>
 </head>
 
 <body class="bg-orange-100 m-0 p-0 box-border">
     <!-- header要素 -->
-    <header class="h-40 bg-orange-100 flex items-center relative">
+    <header class="h-40 bg-orange-100 flex items-center">
         <!-- ハンバーガーメニュー -->
         <button type="button" class="btn js-btn">
             <span class="btn-line"></span>
         </button>
 
         <!-- メニューオーバーレイ -->
+        <!-- TODO:表示メニューの調整 -->
         <nav>
-            <ul class="menu">
-                <li class="menu-list"><a href="#" class="py-2 px-4 block hover:text-white">ポイント</a></li>
+            <ul class="menu bg-orange-200">
+                <li class="menu-list "><a href="#" class="pt-24 pb-2 px-4  block ">ロゴ</a></li>
+                <li class="menu-list"><a href="#" class="py-2 px-4  block hover:text-white">ポイント</a></li>
                 <li class="menu-list"><a href="#" class="py-2 px-4 block hover:text-white">タスク管理</a></li>
                 <li class="menu-list"><a href="#" class="py-2 px-4 block hover:text-white">グループ管理</a></li>
             </ul>
@@ -165,7 +163,7 @@
 
         <!-- iconとalarmの画像配置 -->
         <div class="flex justify-center absolute right-3">
-            <img class="w-24 h-24 bg-white rounded-full mr-3" src="/frontend/images/alarm.png" alt="alarm" />
+            <img class="w-24 h-24  bg-white rounded-full mr-6 mt-0" src="/frontend/images/alarm.png" alt="alarm" />
             <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon" />
         </div>
     </header>
