--- a/frontend/src/main/resources/html/login_group.html
+++ b/frontend/src/main/resources/html/login_group.html
@@ -2,28 +2,21 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>ポイント管理</title>
+        <title>ログイン画面</title>
         <link rel="stylesheet" href="/frontend/src/main/resources/static/login_group.css">
     </head>
     <body class="bg-orange-100">
-        <!-- header要素 -->
-        <header class="h-40 bg-orange-100 flex items-center">
-            <!-- ハンバーガーメニュー -->
-            <div class=" w-32 h-32 absolute left-5">
-                    <span class="bg-black h-2 w-24 absolute top-8 left-3.5"></span>
-                    <span class="bg-black h-2 w-24 absolute top-14 left-3.5"></span>
-                    <span class="bg-black h-2 w-24 absolute top-20 left-3.5"></span>
-            </div>
-
-            <!-- iconとalarmの画像配置-->
-            <div class="flex  justify-center absolute right-3">
-                <img class="w-24 h-24 bg-white rounded-full  mr-3 " src="/frontend/images/alarm.png" alt="alarm">
-                <img class="w-24 h-24 bg-white rounded-full" src="/frontend/images/icon.png" alt="icon">
-            </div>
-        </header>
-        <main>
-            <!-- ランキング -->
-            <!-- ご褒美一覧 -->
-        </main>
+<!-- title -->
+<header>
+    <h1>分担ちゃん</h1>
+</header>
+<!-- main -->
+<main>
+    <p>グループを作成しますか？</p>
+    <span>または既にあるグループに参加しますか？</span>
+    <button>グループ作成</button>
+    <p>or</p>
+    <button>グループ参加</button>
+</main>
     </body>
 </html>
