--- a/frontend/src/main/resources/html/login_group.html
+++ b/frontend/src/main/resources/html/login_group.html
@@ -13,7 +13,7 @@
 <!-- main -->
 <main>
     <p>グループを作成しますか？</p>
-    <span>または既にあるグループに参加しますか？</span>
+    <span>または既にあるグループに参加しますか？<br></span>
     <button>グループ作成</button>
     <p>or</p>
     <button>グループ参加</button>
