titleのサイズ調整

--- a/frontend/src/main/resources/html/login_group.html
+++ b/frontend/src/main/resources/html/login_group.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <title>ログイン画面</title>
-        <link rel="stylesheet" href="/frontend/src/main/resources/static/login_group.css">
-    </head>
-    <body class="bg-orange-100">
-<!-- title -->
-<header>
-    <h1>分担ちゃん</h1>
-</header>
-<!-- main -->
-<main>
-    <p>グループを作成しますか？</p>
-    <span>または既にあるグループに参加しますか？<br></span>
-    <button>グループ作成</button>
-    <p>or</p>
-    <button>グループ参加</button>
-</main>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>ログイン画面</title>
+    <link rel="stylesheet" href="/frontend/src/main/resources/static/login_group.css">
+</head>
+
+<body class="bg-orange-100 max-h-lvh">
+    <!-- title -->
+    <header class="h-1/4 bg-slate-300 p-24">
+        <h1 class="text-8xl text-center mt-16">分担ちゃん</h1>
+    </header>
+    <!-- main -->
+    <main class="h-3/4 bg-green-500 p-10 grid justify-center">
+        <p>グループを作成しますか？</p>
+        <span>または既にあるグループに参加しますか？<br></span>
+        <div class="">
+            <button>グループ作成</button>
+            <p>or</p>
+            <button>グループ参加</button>
+        </div>
+    </main>
+</body>
+
 </html>
