画像の追加

--- a/frontend/src/main/resources/html/login_group.html
+++ b/frontend/src/main/resources/html/login_group.html
@@ -14,14 +14,17 @@
     </header>
     <!-- main -->
     <main class="h-3/4 bg-green-500 p-10 grid justify-center">
-        <p>グループを作成しますか？</p>
+        <p class="text-3xl">グループを作成しますか？</p>
         <span>または既にあるグループに参加しますか？<br></span>
-        <div class="">
+        <div class="grid justify-center">
             <button>グループ作成</button>
             <p>or</p>
             <button>グループ参加</button>
         </div>
     </main>
+    <footer>
+        <img src="/frontend/images/Fuzzy Friends Plein Air Painting Trip.png" alt="下の画像">
+    </footer>
 </body>
 
 </html>
