表示する内容の登録

--- a/frontend/src/main/resources/html/setting_user/new_user.html
+++ b/frontend/src/main/resources/html/setting_user/new_user.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ログイン画面</title>
+    <title>新規登録画面</title>
     <link rel="stylesheet" href="/frontend/src/main/resources/static/setting_user/new_user.css">
     <style>
         body {
@@ -32,12 +32,14 @@
     </header>
     <!-- main -->
     <main class="p-10 ">
-        <p class="text-6xl mt-48 text-center">グループを作成しますか？</p>
-        <p class="text-3xl mt-7 text-center">または既にあるグループに参加しますか？</p>
-        <div class="grid justify-center">
-            <button class="mt-16 text-6xl bg-orange-300 font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ作成</button>
-            <p class="text-3xl mt-7 text-center text-gray-400">----------or----------</p>
-            <button class="mt-16 text-6xl bg-green-400 font-light w-fit pt-10 pb-10 pr-28 pl-28">グループ参加</button>
+        <p class="text-6xl mt-36 mb-28 text-center">新規登録</p>
+        <div class="grid justify-center ">
+            <button
+                class="mr-auto ml-auto text-center mt-16 text-4xl bg-orange-300 font-light w-fit pt-10 pb-10 pr-28 pl-28">Lineで登録</button>
+            <p class="text-3xl mt-7 text-center text-gray-400">-------------------または-------------------</p>
+            <button
+                class="ml-auto mr-auto mt-16 text-4xl bg-green-400 font-light w-fit pt-10 pb-10 pr-28 pl-28">Googleで登録</button>
+            <p class="text-3xl mt-9 text-center">「登録」をクリックすると、利用規約とプライバシーポリシーに同意したことになります。</p>
         </div>
     </main>
     <footer class="p-1">
