タスクの詳細画面の作成サンプルデータの作成・表示

--- a/frontend/src/main/resources/html/task_info.html
+++ b/frontend/src/main/resources/html/task_info.html
@@ -4,14 +4,89 @@
         <meta charset="UTF-8">
         <title>タスクの</title>
         <link rel="stylesheet" href="/frontend/src/main/resources/static/task_info.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"/>
+        <style>
+            body {
+                height: 100vh;
+                overflow-y: hidden;
+                header {
+                    height: 20%;
+                }
+                main{
+                    height: 80%;
+                }
+                /* footer{
+                    height: 30%;
+                } */
+            }
+            .material-icons {
+                font-size: 90px;
+            }
+            #status-message ,#task-message, #task-deadline {
+                font-size: 40px;
+                line-height: 1;
+            }
+            .btn {
+            background-color: #FFCCC0; /* ボタンの背景色 */
+            border-bottom: 4px solid #FFA07A; /* 下線の色 */
+            box-shadow: 0.1em 0.1em 3px rgba(0, 0, 0, 0.5); /* 影の設定 */
+            width: 300px; 
+            height: 100px;
+            border: none;
+            border-radius: 30px;
+            font-size: 40px;
+            }
+        </style>
     </head>
-    <body class="bg-orange-100">
+    <body class="bg-orange-50">
         <!-- header要素 -->
-        <header class="h-40 bg-orange-100 flex items-center">
-            
+        <header class="flex justify-center items-end h-1/6 pb-4">
+            <h1 class="text-8xl text-orange-500 font-bold flex justify-center items-end">タスクのタイトル</h1>
         </header>
         <!-- main要素 -->
-        <main>
+        <main class="flex flex-col items-center">
+            <!-- 現在のステータスを表示 -->
+            <div class="flex border-orange-100 bg-orange-100 border-4 mt-16 w-4/5 h-52 items-center rounded-3xl">
+                <span class="material-icons text-orange-500 ml-12">notifications</span>
+                <span class="ml-6" id="status-message">ステータスメッセージの表示</span>
+            </div>
+            <!-- タスクの詳細コンテナ　-->
+            <div class="task-info-container flex flex-col items-center mt-24 ml-16 mr-16 pl-8 pr-8 w-9/12 h-4/6">
+                <!-- タスクのイメージ画像　-->
+                <div class="rounded-3xl overflow-hidden h-3/6">
+                    <img src="" alt="Task Image" class="w-full h-full" id="task-image"/>
+                </div>
+                <!-- メッセージコンテナ -->
+                <div class="mt-14 h-2/6">
+                    <p class="leading-normal tracking-widest" id="task-message">タスクに対するメッセージを表示</p>
+                </div>
+                <div class="flex-grow">
+                    <p class="pl-56" id="task-deadline">期限: YYYY/MM/DD HH:MM</p>
+                </div>
+            </div>
+            <div class="items-center">
+                <button class="btn">終わり</button>
+            </div>
         </main>
+        <!-- script要素 -->
+        <script>
+            // サンプルデータ
+            const task = {
+                status: '手伝ってください！',
+                title: 'かいもの',
+                image: '/frontend/images/supermarket.png', //　画像URL
+                message: 'ライフスーパーにパスタソースをかってほしい。\nじぶんが好きなあじをえらんでもいいよ。\nおねがい。',
+                deadline: '2024/06/05 19:30'
+            };
+    
+            // 改行文字を <br> に変換
+            const formattedMessage = task.message.replace(/\n/g, '<br>');
+            // データをDOMに表示
+            document.getElementById('status-message').textContent = task.status;
+            document.querySelector('h1').textContent = task.title;
+            document.getElementById('task-image').src = task.image;
+            document.getElementById('task-message').innerHTML = formattedMessage;
+            document.getElementById('task-deadline').textContent = '期限: ' + task.deadline;
+        </script>
     </body>
 </html>
